--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Email support package for the Dappur Framework",
     "keywords": ["dappur", "dappurware", "framework", "email"],
     "version": "4.0.1",
-    "homepage": "https://github.com/dappur/dappurware",
+    "homepage": "https://github.com/dappur/dappurware-email",
     "license": "MIT",
     "authors": [
         {
