--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.2",
         "phpmd/phpmd": "^2.6"
+    },
+    "require": {
+        "soundasleep/html2text": "^0.5.0"
     }
 }
